--- a/src/components/CardDetail.css
+++ b/src/components/CardDetail.css
@@ -142,3 +142,8 @@ img {
   justify-content: 'center';
   align-items: 'center';
 }
+
+.selectContainer{
+  margin-right: 1.5rem;
+  margin-left: 1.5rem;
+}
